# github-mcp-small

./: README.md  pyproject.toml
src/version_control_helper_mcp/: __init__.py  git_utils.py  models.py  server.py  tools.py
